--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node server.ts",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production node server.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "express": "^4.18.2",
     "next": "14.1.0",
+    "peer": "^1.0.2",
     "react": "^18",
     "react-dom": "^18"
   },
